Test signatures missing "test" notation
* MOPPIOS-565 - [Test environment] Test signatures missing "test" notation

Signed-off-by: Marten Rebane marten.rebane@nortal.com

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -124,6 +124,7 @@
 "container-signature-status-non-qscd" = "(Restrictions)";
 "container-signature-status-invalid" = "Signature is not valid";
 "container-signature-status-unknown" = "Signature is unknown";
+"container-signature-test-signature-title" = "Test signature";
 
 // *** Mobile ID Challenge View ***
 
