--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -125,6 +125,7 @@
 "container-signature-status-non-qscd" = "(Piirangud)";
 "container-signature-status-invalid" = "Allkiri ei ole kehtiv";
 "container-signature-status-unknown" = "Allkiri on teadmata";
+"container-signature-test-signature-title" = "Testallkiri";
 
 // *** Mobile ID Challenge View ***
 
