--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -126,6 +126,7 @@
 "container-signature-status-invalid" = "Allkiri ei ole kehtiv";
 "container-signature-status-unknown" = "Allkiri on teadmata";
 "container-signature-test-signature-title" = "Testallkiri";
+"container-timestamp-invalid" = "Ajatempel ei ole kehtiv";
 
 // *** Mobile ID Challenge View ***
 
