--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -134,6 +134,7 @@
 // *** Errors ***
 "mobile-id-timeout-message" = "Тайм-аут запроса Mobiil-ID";
 "error-alert-title-general" = "Отказ";
+"error-alert-open-link" = "Дополнительная информация";
 
 // *** Share Extension ***
 "share-extension-import-title" = "Импорт файла";
@@ -170,7 +171,7 @@
 "card-reader-state-ready-for-pin1" = "Готово к дешифрованию с помощью ID-карты.\n%@ (%@)";
 "signing-in-progress" = "Происходит подписание.\nПожалуйста, подождите.";
 "decryption-in-progress" = "Происходит дешифрование. Пожалуйста, подождите.";
-"signing-error-too-many-requests" = "Предел для цифровых подписей в месяц был достигнут для этого IP-адреса. Дополнительная информация (https://www.id.ee/index.php?id=39025)";
+"signing-error-too-many-requests" = "Предел для цифровых подписей в месяц был достигнут для этого IP-адреса. https://www.id.ee/index.php?id=39025";
 "wrong-pin2" = "Неверный PIN2. У Вас осталось %d попыток.";
 "wrong-pin1" = "Неверный PIN1. У Вас осталось %1$d попыток.";
 "wrong-pin2-single" = "Неверный PIN2. У Вас осталась 1 попытка до блокировки Вашего PIN2.";
