--- a/SkSigningLib/SkSigningLib/Supporting Files/ru.lproj/Localizable.strings
+++ b/SkSigningLib/SkSigningLib/Supporting Files/ru.lproj/Localizable.strings
@@ -26,7 +26,7 @@
 "digidoc-service-error-timeout" = "Срок действия вашей транзакции Mobiil-ID истек. Пожалуйста, попробуйте еще раз";
 "digidoc-service-error-delivery-error" = "Ошибка запроса";
 "digidoc-service-error-sim-error" = "Ошибка SIM карты";
-"digidoc-service-error-phone-absent" = "Телефон вне сети интернет";
+"digidoc-service-error-phone-absent" = "Отказ - телефон вне сети";
 "digidoc-service-error-signature-hash-mismatch" = "Не удалось выполнить операцию Mobiil-ID. Пожалуйста, свяжитесь со своим мобильным оператором";
 "digidoc-service-error-no-response" = "Пожалуйста проверьте подключение к интернету";
 "digidoc-service-error-too-many-requests" = "Предел для цифровых подписей в месяц был достигнут для этого IP-адреса. Дополнительная информация (https://www.id.ee/index.php?id=39025)";
