--- a/MoppLib/et.lproj/Localizable.strings
+++ b/MoppLib/et.lproj/Localizable.strings
@@ -44,6 +44,7 @@
 
 "digidoc-service-status-request-sent" = "Allkirjastamispäring saadetud";
 "digidoc-service-status-request-ok" = "Päring vastuvõetud";
+"digidoc-service-status-request-select-account" = "Allkirjastamiseks kinnita seade Smart-ID rakenduses.";
 "digidoc-service-status-request-expired-transaction" = "Päringu ajalõpp";
 "digidoc-service-status-request-user-cancel" = "Kasutaja katkestas";
 "digidoc-service-status-request-signature" = "Allkiri saadud";
