--- a/SkSigningLib/SkSigningLib/Supporting Files/ru.lproj/Localizable.strings
+++ b/SkSigningLib/SkSigningLib/Supporting Files/ru.lproj/Localizable.strings
@@ -31,3 +31,11 @@
 "mid-rest-error-no-response" = "Пожалуйста проверьте подключение к интернету";
 "mid-rest-error-too-many-requests" = "Предел для цифровых подписей в месяц был достигнут для этого IP-адреса. https://www.id.ee/index.php?id=39025";
 "mid-rest-error-invalid-ssl-cert" = "Не удалось создать SSL канал передачи данных. Проверьте настройки вашего приложения или обновления программного обеспечения";
+"sid-rest-error-wrong-vc" = "Ошибка: выбран неправильный контрольный код";
+"sid-rest-error-document-unusable" = "Error: document unusable";
+"sid-rest-error-not-qualified" = "Для проставления подписи в мобильном приложении RIA DigiDoc, ваш Smart-ID должен соответствовать уровню \"высокий\".";
+"sid-rest-error-old-api" = "Мобильное приложение RIA DigiDoc нуждается в обновлении. Пожалуйста, установите новую версию из магазина мобильных приложений. Дополнительную информацию можно получить по телефону (+372) 666 8888.";
+"sid-rest-error-under-maintenance" = "Технический сбой услуги Smart-ID. Пожалуйста, попробуйте позже.";
+"sid-rest-error-timeout" = "Срок действия вашей транзакции Smart-ID истек. Пожалуйста, попробуйте еще раз.";
+"sid-rest-error-forbidden" = "Не удалось подписать контейнер. Проверьте настройки доступа услуги Smart-ID. https://www.id.ee/index.php?id=39025";
+"sid-rest-error-account-not-found" = "Счет не найден";
