Implement review changes
OP-121

Signed-off-by: Raul Metsma <raul@metsma.ee>

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -152,7 +152,7 @@
 "mobile-id-challenge-title" = "Sign with Mobile-ID app";
 "mobile-id-challenge-waiting-response" = "Waiting for response ...";
 "smart-id-title" = "Enter your personal code to sign with Smart-ID";
-"smart-id-country-title" = "Country code";
+"smart-id-country-title" = "Country";
 "smart-id-country-estonia" = "Estonia";
 "smart-id-country-lithuania" = "Lithuania";
 "smart-id-country-latvia" = "Latvia";
