--- a/SkSigningLib/SkSigningLib/Supporting Files/en.lproj/Localizable.strings
+++ b/SkSigningLib/SkSigningLib/Supporting Files/en.lproj/Localizable.strings
@@ -30,6 +30,7 @@
 "mid-rest-error-signature-hash-mismatch" = "Your Mobile-ID transaction has failed. Please contact your mobile network operator";
 "mid-rest-error-no-response" = "Please check your internet connection";
 "mid-rest-error-too-many-requests" = "The limit for digital signatures per month has been reached for this IP address. https://www.id.ee/index.php?id=39023";
+"mid-rest-error-exceeded-unsuccessful-requests" = "Failed to send request. The number of unsuccessful request from this IP address has been exceeded. Please try again later.";
 "mid-rest-error-invalid-ssl-cert" = "SSL handshake failed. Check your application settings or software upgrades";
 "sid-rest-error-wrong-vc" = "Error: an incorrect control code was chosen";
 "sid-rest-error-document-unusable" = "Your Smart-ID transaction has failed. Please check your Smart-ID application or contact Smart-ID customer support.";
