--- a/SkSigningLib/SkSigningLib/Supporting Files/ru.lproj/Localizable.strings
+++ b/SkSigningLib/SkSigningLib/Supporting Files/ru.lproj/Localizable.strings
@@ -30,6 +30,7 @@
 "mid-rest-error-signature-hash-mismatch" = "Не удалось выполнить операцию Mobiil-ID. Пожалуйста, свяжитесь со своим мобильным оператором";
 "mid-rest-error-no-response" = "Пожалуйста проверьте подключение к интернету";
 "mid-rest-error-too-many-requests" = "Предел для цифровых подписей в месяц был достигнут для этого IP-адреса. https://www.id.ee/index.php?id=39025";
+"mid-rest-error-exceeded-unsuccessful-requests" = "Не удалось отправить запрос. Превышено количество неудачных запросов с этого IP-адреса. Пожалуйста, попробуйте позже.";
 "mid-rest-error-invalid-ssl-cert" = "Не удалось создать SSL канал передачи данных. Проверьте настройки вашего приложения или обновления программного обеспечения";
 "sid-rest-error-wrong-vc" = "Ошибка: выбран неправильный контрольный код";
 "sid-rest-error-document-unusable" = "Не удалось выполнить операцию Smart-ID. Пожалуйста, проверьте приложение Smart-ID или свяжитесь со службой поддержки Smart-ID.";
