--- a/SkSigningLib/SkSigningLib/Supporting Files/et.lproj/Localizable.strings
+++ b/SkSigningLib/SkSigningLib/Supporting Files/et.lproj/Localizable.strings
@@ -32,6 +32,7 @@
 "mid-rest-error-too-many-requests" = "Sinu IP-aadressi tasuta allkirjade kuulimiit on ületatud. https://id.ee/index.php?id=39021";
 "mid-rest-error-exceeded-unsuccessful-requests" = "Päringu saatmine ebaõnnestus. Sellelt IP-aadressilt on ebaõnnestunud päringute arv ületatud. Palun proovige mõne aja pärast uuesti.";
 "mid-rest-error-invalid-access-rights" = "Ümbriku allkirjastamine ebaõnnestus. Kontrolli mobiil-ID teenuse ligipääsu seadeid. https://www.id.ee/artikkel/asutustele-kus-allkirjastatakse-digidoc4-kliendi-kaudu-suuremates-kogustes-dokumente/";
+"mid-rest-error-ocsp-invalid-time-slot" = "Palun kontrollige oma nutiseadme kellaaega. https://www.id.ee/artikkel/ria-digidoc-viga-palun-kontrollige-oma-nutiseadme-kellaaega/";
 "mid-rest-error-invalid-ssl-cert" = "SSL ühenduskanali loomine ebaõnnestus. Kontrolli rakenduse seadeid või tarkvara uuendusi";
 "sid-rest-error-wrong-vc" = "Viga: valiti vale kontrollkood";
 "sid-rest-error-document-unusable" = "Teie Smart-ID toiming ebaõnnestus. Palun kontrollige Smart-ID rakendust või võtke ühendust Smart-ID klienditoega.";
