--- a/SkSigningLib/SkSigningLib/Supporting Files/ru.lproj/Localizable.strings
+++ b/SkSigningLib/SkSigningLib/Supporting Files/ru.lproj/Localizable.strings
@@ -42,3 +42,4 @@
 "sid-rest-error-timeout" = "Срок действия вашей транзакции Smart-ID истек. Пожалуйста, попробуйте еще раз.";
 "sid-rest-error-forbidden" = "Не удалось подписать контейнер. Проверьте настройки доступа услуги Smart-ID. https://www.id.ee/index.php?id=39025";
 "sid-rest-error-account-not-found" = "Счет не найден";
+"sid-rest-error-certificate-revoked" = "Сертификат недействителен";
