--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -183,6 +183,7 @@
 "signing-in-progress" = "Происходит подписание.\nПожалуйста, подождите.";
 "decryption-in-progress" = "Происходит дешифрование. Пожалуйста, подождите.";
 "signing-error-too-many-requests" = "Предел для цифровых подписей в месяц был достигнут для этого IP-адреса. https://www.id.ee/index.php?id=39025";
+"no-response-error" = "Пожалуйста проверьте подключение к интернету";
 "wrong-pin2" = "Неверный PIN2. У Вас осталось %d попыток.";
 "wrong-pin1" = "Неверный PIN1. У Вас осталось %1$d попыток.";
 "wrong-pin2-single" = "Неверный PIN2. У Вас осталась 1 попытка до блокировки Вашего PIN2.";
