Save files from containers
* MOPPIOS-219

Signed-off-by: Marten Rebane marten.rebane@nortal.com

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -100,6 +100,9 @@
 "file-import-create-new-failed-alert-title" = "Error creating container";
 "file-import-create-new-failed-alert-message" = "Failed to open container %@";
 "file-import-remove-file" = "Remove File";
+"file-import-save-file" = "Save file";
+"file-import-file-saved" = "File saved";
+"file-import-failed-file-save" = "Failed to save file";
 
 // Details
 "container-details-signing-success" = "SIGNATURE ADDED";
