--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -99,6 +99,9 @@
 "file-import-create-new-failed-alert-title" = "Ошибка при создании контейнера";
 "file-import-create-new-failed-alert-message" = "Не удалось открыть контейнер %@";
 "file-import-remove-file" = "Удалить Файл";
+"file-import-save-file" = "Сохраните файл";
+"file-import-file-saved" = "Файл сохранен";
+"file-import-failed-file-save" = "Не удалось сохранить файл";
 
 // Details
 "container-details-signing-success" = "ПОДПИСЬ ДОБАВЛЕНА";
